--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ header {
 .resto {
   width: calc(100% - 40px);
   background-color: #f6f6f6;
-  padding: 0px 20px 20px 20px;
+  padding: 0px 20px 48px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -217,6 +217,7 @@ header {
   border-radius: 25px;
   -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
           box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
+  margin-bottom: 17px;
 }
 
 .resto__item__pic {
@@ -325,7 +326,6 @@ header {
 /* Footer */
 .footer {
   width: calc(100% - 40px);
-  margin: 45px 0 0 0;
   padding: 15px 20px;
   color: white;
   background-color: #353535;
