--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,30 @@ h1 {
   margin: 50px 0 0 0;
 }
 
+button {
+  margin-top: 30px;
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: white;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #ff79da), color-stop(0%, #ff79da), to(#9356dc));
+  background-image: linear-gradient(to bottom, #ff79da 1%, #ff79da 0%, #9356dc 100%);
+  cursor: pointer;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
+  -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+}
+
+button:hover {
+  -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
+  -webkit-filter: brightness(107%);
+          filter: brightness(107%);
+}
+
 /* header */
 .header {
   display: -ms-grid;
@@ -111,23 +135,6 @@ h1 {
 .cityOptions p,
 .cityOptions h1 {
   max-width: 80%;
-}
-
-.cityOptions button {
-  margin-top: 30px;
-  border: 0;
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  border-radius: 100px;
-  color: white;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #ff79da), color-stop(0%, #ff79da), to(#9356dc));
-  background-image: linear-gradient(to bottom, #ff79da 1%, #ff79da 0%, #9356dc 100%);
-  cursor: pointer;
-  -webkit-transition-duration: 0.25s;
-          transition-duration: 0.25s;
-  -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
 }
 
 /* Tutorial */
@@ -321,6 +328,16 @@ h1 {
 
 .resto__item__bar__fav:hover .resto__item__bar__fav__icn-unchecked {
   display: none;
+}
+
+.gradientIcon,
+.gradientIcon:before {
+  display: inline;
+  color: #9c47fc;
+  display: block;
+  background: -webkit-linear-gradient(#fff, #356ad2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* Footer */
