--- a/css/main.scss
+++ b/css/main.scss
@@ -31,6 +31,29 @@ h1 {
     margin: 50px 0 0 0;
 }
 
+button {
+    margin-top: 30px;
+    border: 0;
+    padding: 0.75rem 1.5rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+    border-radius: 100px;
+    color: white;
+    background-image: linear-gradient(
+        to bottom,
+        $color-two 1%,
+        $color-two 0%,
+        $color-one 100%
+    );
+    cursor: pointer;
+    transition-duration: 0.25s;
+    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+    &:hover {
+        box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
+        filter: brightness(107%);
+    }
+}
+
 /* header */
 .header {
     display: grid;
@@ -78,24 +101,6 @@ h1 {
     p,
     h1 {
         max-width: 80%;
-    }
-    button {
-        margin-top: 30px;
-        border: 0;
-        padding: 0.75rem 1.5rem;
-        font-weight: 500;
-        font-size: 1.1rem;
-        border-radius: 100px;
-        color: white;
-        background-image: linear-gradient(
-            to bottom,
-            $color-two 1%,
-            $color-two 0%,
-            $color-one 100%
-        );
-        cursor: pointer;
-        transition-duration: 0.25s;
-        box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
     }
 }
 /* Tutorial */
@@ -225,6 +230,16 @@ h1 {
         }
     }
 }
+.gradientIcon,
+.gradientIcon:before {
+    display: inline;
+    color: #9c47fc;
+    display: block;
+    background: -webkit-linear-gradient(#fff, #356ad2);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 /* Footer */
 
 .footer {
