--- a/css/pages.css
+++ b/css/pages.css
@@ -71,9 +71,10 @@
   margin-bottom: 14px;
   -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  max-width: 400px;
 }
 
-.menu__starter {
+.menu__sub {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,7 +84,19 @@
           flex-direction: column;
 }
 
-.menu__starter__name {
+.menu__sub h4 {
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 8px;
+}
+
+.menu__sub__line {
+  height: 3px;
+  background-color: #99e2d0;
+  width: 40px;
+}
+
+.menu__sub__name {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -102,7 +115,8 @@
   text-overflow: ellipsis;
 }
 
-.menu__starter__name h4 {
+.menu__sub__name h4 {
+  text-transform: inherit;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -111,7 +125,7 @@
   margin: 0px 0px 7px 0px;
 }
 
-.menu__starter__name span {
+.menu__sub__name span {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -119,7 +133,7 @@
   font-weight: 300;
 }
 
-.menu__starter__price {
+.menu__sub__price {
   width: 10%;
   font-size: 11pt;
   font-weight: 500;
@@ -135,19 +149,21 @@
           justify-content: flex-end;
 }
 
-.menu__starter__price span {
+.menu__sub__price span {
   text-overflow: ellipsis;
 }
 
 .menuItem {
   overflow: hidden;
   cursor: pointer;
-  -webkit-animation: itemAppear 0.6s;
-          animation: itemAppear 0.6s;
+  -webkit-animation: itemAppear 1s;
+          animation: itemAppear 1s;
   -webkit-animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
           animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .menuItem__confirmation {
@@ -245,5 +261,28 @@
 .time-8 {
   -webkit-animation-delay: 0.8s;
           animation-delay: 0.8s;
+}
+
+.time-9 {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+@-webkit-keyframes itemAppear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes itemAppear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=pages.css.map */
