--- a/css/pages.scss
+++ b/css/pages.scss
@@ -49,9 +49,19 @@ $color-three: #99e2d0;
         box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
         max-width: 400px;
     }
-    &__starter {
+    &__sub {
         display: flex;
         flex-direction: column;
+        & h4 {
+            text-transform: uppercase;
+            font-weight: 300;
+            margin-bottom: 8px;
+        }
+        &__line {
+            height: 3px;
+            background-color: #99e2d0;
+            width: 40px;
+        }
         &__name {
             flex-grow: 1;
             flex-direction: column;
@@ -61,6 +71,7 @@ $color-three: #99e2d0;
             overflow: hidden;
             text-overflow: ellipsis;
             h4 {
+                text-transform: inherit;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
@@ -92,9 +103,10 @@ $color-three: #99e2d0;
 .menuItem {
     overflow: hidden;
     cursor: pointer;
-    animation: itemAppear 0.6s;
+    animation: itemAppear 1s;
     animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
     animation-fill-mode: both;
+    transform: scale(1);
 
     &__confirmation {
         background-color: $color-three;
@@ -132,8 +144,16 @@ $color-three: #99e2d0;
     }
 }
 /* Delay Animation */
-@for $i from 0 to 9 {
+@for $i from 0 to 10 {
     .time-#{$i} {
         animation-delay: #{$i/10}s;
+    }
+}
+@keyframes itemAppear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
