--- a/css/pages.css
+++ b/css/pages.css
@@ -217,6 +217,32 @@
   color: #99e2d0;
 }
 
+/* Animations */
+@-webkit-keyframes itemAppear {
+  0% {
+    -webkit-transform: translate(0, 10px);
+            transform: translate(0, 10px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+@keyframes itemAppear {
+  0% {
+    -webkit-transform: translate(0, 10px);
+            transform: translate(0, 10px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+
 /* Delay Animation */
 .time-0 {
   -webkit-animation-delay: 0s;
@@ -266,23 +292,5 @@
 .time-9 {
   -webkit-animation-delay: 0.9s;
           animation-delay: 0.9s;
-}
-
-@-webkit-keyframes itemAppear {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes itemAppear {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 /*# sourceMappingURL=pages.css.map */
