--- a/css/pages.scss
+++ b/css/pages.scss
@@ -143,17 +143,23 @@ $color-three: #99e2d0;
         color: $color-three;
     }
 }
+
+/* Animations */
+
+@keyframes itemAppear {
+    0% {
+        transform: translate(0, 10px);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+}
+
 /* Delay Animation */
 @for $i from 0 to 10 {
     .time-#{$i} {
         animation-delay: #{$i/10}s;
-    }
-}
-@keyframes itemAppear {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
     }
 }
