--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,113 @@ button:hover {
           filter: brightness(107%);
 }
 
+/* Loader */
+.loader {
+  -webkit-transition: ease-in-out;
+  transition: ease-in-out;
+  background-color: #fff;
+  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  line-height: 100%;
+  font-family: Shrikhand, sans-serif;
+  font-size: x-large;
+  position: fixed;
+  z-index: 9999;
+  -webkit-animation: loader 3s;
+          animation: loader 3s;
+  visibility: hidden;
+}
+
+.loader__brand {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.loader__brand span {
+  padding-bottom: 15px;
+}
+
+.loader__spinner {
+  width: 200px;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 50%;
+  border: 2px solid rgba(0, 0, 0, 0.15);
+  border-top: solid 2px black;
+  -webkit-animation: spinner 0.75s infinite;
+          animation: spinner 0.75s infinite;
+}
+
+@-webkit-keyframes loader {
+  0% {
+    visibility: visible;
+    opacity: 0.95;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0.85;
+  }
+}
+
+@keyframes loader {
+  0% {
+    visibility: visible;
+    opacity: 0.95;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0.85;
+  }
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 /* header */
 .header {
   display: -ms-grid;
@@ -100,6 +207,9 @@ button:hover {
 }
 
 .cityMapping {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -110,6 +220,11 @@ button:hover {
       align-content: center;
   height: 50px;
   background-color: #eaeaea;
+}
+
+.cityMapping svg {
+  margin-right: 18px;
+  margin-left: -18px;
 }
 
 /* Option selon ville  */
