--- a/css/main.scss
+++ b/css/main.scss
@@ -168,12 +168,18 @@ button {
 }
 /* Tutorial */
 .engineNotice {
+    display: flex;
+    flex-direction: column;
     padding: 0 20px;
     &__li__icn {
         color: #7e7e7e;
         margin: 27px;
     }
     ol {
+        display: flex;
+        min-width: 320px;
+        flex-direction: column;
+        align-self: center;
         margin: 30px 0px 68px 15px;
         padding: 0;
         counter-reset: steps;
@@ -208,18 +214,21 @@ button {
 }
 /* Restaurants */
 .resto {
-    width: calc(100% - 40px);
+    width: 100%;
     background-color: $background-color-grey;
-    padding: 0px 20px 48px 20px;
+    padding: 0px 0px 48px 0px;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     h1 {
-        margin: 60px 0 25px 0;
+        width: 100%;
+        margin: 60px 0 25px 20px;
     }
     &__item {
         background-color: white;
         max-width: 450px;
+        min-width: 340px;
+        margin: 0 20px;
         display: flex;
         flex-direction: column;
         border-radius: 25px;
