--- a/css/main.css
+++ b/css/main.css
@@ -349,6 +349,9 @@ button:hover {
   background-color: white;
   max-width: 450px;
   min-width: 340px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   margin: 0 20px;
   display: -webkit-box;
   display: -ms-flexbox;
