--- a/css/main.scss
+++ b/css/main.scss
@@ -228,6 +228,7 @@ button {
         background-color: white;
         max-width: 450px;
         min-width: 340px;
+        flex-grow: 1;
         margin: 0 20px;
         display: flex;
         flex-direction: column;
