--- a/css/pages.scss
+++ b/css/pages.scss
@@ -24,7 +24,7 @@ $color-three: #99e2d0;
     }
     &__title {
         display: flex;
-        margin: 0 40px 0 20px;
+        margin: 0 40px 20px 20px;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
@@ -37,8 +37,12 @@ $color-three: #99e2d0;
     }
 }
 .menu {
-    padding: 20px 20px;
     background-color: $background-color-grey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
     li {
         background-color: white;
         border-radius: 20px;
@@ -47,55 +51,70 @@ $color-three: #99e2d0;
         padding: 15px 15px 15px 15px;
         margin-bottom: 14px;
         box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
-        max-width: 400px;
+        width: 310px;
     }
-    &__sub {
+    & button {
+        max-width: 186px;
+        font-size: 0.9rem;
         display: flex;
-        flex-direction: column;
-        & h4 {
-            text-transform: uppercase;
-            font-weight: 300;
-            margin-bottom: 8px;
-        }
-        &__line {
-            height: 3px;
-            background-color: #99e2d0;
-            width: 40px;
-        }
-        &__name {
-            flex-grow: 1;
-            flex-direction: column;
+        align-self: center;
+        margin-bottom: 58px;
+    }
+    &__wrap {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        &__sub {
+            margin: 20px 20px 0 20px;
             display: flex;
-            justify-content: flex-end;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            h4 {
-                text-transform: inherit;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                font-size: 14pt;
-                font-weight: 500;
-                margin: 0px 0px 7px 0px;
-            }
-            span {
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                font-size: 11pt;
+            flex-direction: column;
+            & h4 {
+                text-transform: uppercase;
                 font-weight: 300;
+                margin-top: 0px;
+                margin-bottom: 8px;
             }
-        }
-        &__price {
-            width: 10%;
-            font-size: 11pt;
-            font-weight: 500;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            span {
+
+            &__line {
+                height: 3px;
+                background-color: #99e2d0;
+                width: 40px;
+            }
+            &__name {
+                flex-grow: 1;
+                flex-direction: column;
+                display: flex;
+                justify-content: flex-end;
+                white-space: nowrap;
+                overflow: hidden;
                 text-overflow: ellipsis;
+                h4 {
+                    text-transform: inherit;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    font-size: 14pt;
+                    font-weight: 500;
+                    margin: 0px 0px 7px 0px;
+                }
+                span {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    font-size: 11pt;
+                    font-weight: 300;
+                }
+            }
+            &__price {
+                width: 10%;
+                font-size: 11pt;
+                font-weight: 500;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                span {
+                    text-overflow: ellipsis;
+                }
             }
         }
     }
