--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 }
 
 h1 {
-  margin: 50px 0 0 0;
+  margin: 50px 0 0 0px;
 }
 
 button {
@@ -258,11 +258,27 @@ button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0 20px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 0 20px;
+}
+
+.engineNotice__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 1120px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
 }
 
 .engineNotice__li__icn {
@@ -274,19 +290,22 @@ button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-width: 320px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   -ms-flex-item-align: center;
       align-self: center;
-  margin: 30px 0px 68px 15px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 30px 0px 68px 0px;
   padding: 0;
   counter-reset: steps;
 }
 
 .engineNotice ol li {
+  min-width: 320px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -338,6 +357,28 @@ button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.resto__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 100%;
+  max-width: 1120px;
 }
 
 .resto h1 {
@@ -347,7 +388,7 @@ button:hover {
 
 .resto__item {
   background-color: white;
-  max-width: 450px;
+  max-width: 520px;
   min-width: 340px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -530,5 +571,57 @@ button:hover {
   line-height: 1.8rem;
   font-weight: 500;
   font-size: 11pt;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer li {
+    margin: 0 20px;
+  }
+  .footer__container {
+    width: 1120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .resto__wrap {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .engineNotice ol {
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .engineNotice ol li {
+    min-width: 300px;
+  }
+  .engineNotice ol li:first-child {
+    margin-left: 15px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
