--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ html {
     scroll-behavior: smooth;
 }
 h1 {
-    margin: 50px 0 0 0;
+    margin: 50px 0 0 0px;
 }
 
 button {
@@ -169,22 +169,34 @@ button {
 /* Tutorial */
 .engineNotice {
     display: flex;
-    flex-direction: column;
     padding: 0 20px;
+    flex-direction: column;
+    h1 {
+    }
+    &__wrap {
+        display: flex;
+        flex-direction: column;
+        max-width: 1120px;
+        align-self: center;
+        flex-wrap: wrap;
+        width: 100%;
+    }
     &__li__icn {
         color: #7e7e7e;
         margin: 27px;
     }
     ol {
         display: flex;
-        min-width: 320px;
         flex-direction: column;
         align-self: center;
-        margin: 30px 0px 68px 15px;
+        justify-content: space-between;
+        margin: 30px 0px 68px 0px;
         padding: 0;
         counter-reset: steps;
     }
     ol li {
+        min-width: 320px;
+
         display: flex;
         height: 73px;
         background-color: $background-color-grey;
@@ -220,13 +232,23 @@ button {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
+    &__wrap {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-self: center;
+        width: 100%;
+        max-width: 1120px;
+    }
     h1 {
         width: 100%;
         margin: 60px 0 25px 20px;
     }
     &__item {
         background-color: white;
-        max-width: 450px;
+        max-width: 520px;
         min-width: 340px;
         flex-grow: 1;
         margin: 0 20px;
@@ -346,5 +368,37 @@ button {
         line-height: 1.8rem;
         font-weight: 500;
         font-size: 11pt;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .footer ul {
+        display: flex;
+        justify-content: space-between;
+    }
+    .footer {
+        li {
+            margin: 0 20px;
+        }
+        display: flex;
+        justify-content: center;
+        &__container {
+            width: 1120px;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+    .resto__wrap {
+        justify-content: space-between;
+    }
+    .engineNotice ol {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .engineNotice ol li {
+        min-width: 300px;
+        &:first-child {
+            margin-left: 15px;
+        }
     }
 }
