--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ ul {
 
 body,
 html {
+  overflow-x: hidden;
   margin: 0;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
@@ -309,7 +310,8 @@ button:hover {
 }
 
 .engineNotice ol li {
-  min-width: 320px;
+  min-width: 305px;
+  margin-left: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -383,11 +385,12 @@ button:hover {
       align-self: center;
   width: 100%;
   max-width: 1120px;
+  padding: 0 20px;
 }
 
 .resto h1 {
   width: 100%;
-  margin: 60px 0 25px 20px;
+  margin: 60px 0 25px 0px;
 }
 
 .resto__item {
@@ -397,7 +400,6 @@ button:hover {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  margin: 0 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -626,6 +628,12 @@ button:hover {
   }
   .engineNotice ol li:first-child {
     margin-left: 15px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .resto__item {
+    margin: 20px 20px;
   }
 }
 /*# sourceMappingURL=main.css.map */
