--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,7 @@ ul {
 }
 body,
 html {
+    overflow-x: hidden;
     margin: 0;
     font-family: "Roboto", sans-serif;
     scroll-behavior: smooth;
@@ -198,8 +199,8 @@ button {
         counter-reset: steps;
     }
     ol li {
-        min-width: 320px;
-
+        min-width: 305px;
+        margin-left: 15px;
         display: flex;
         height: 73px;
         background-color: $background-color-grey;
@@ -244,17 +245,17 @@ button {
         align-self: center;
         width: 100%;
         max-width: 1120px;
+        padding: 0 20px;
     }
     h1 {
         width: 100%;
-        margin: 60px 0 25px 20px;
+        margin: 60px 0 25px 0px;
     }
     &__item {
         background-color: white;
         max-width: 520px;
         min-width: 340px;
         flex-grow: 1;
-        margin: 0 20px;
         display: flex;
         flex-direction: column;
         border-radius: 25px;
@@ -403,5 +404,10 @@ button {
         &:first-child {
             margin-left: 15px;
         }
+    }
+}
+@media screen and (min-width: 700px) {
+    .resto__item {
+        margin: 20px 20px;
     }
 }
