--- a/css/main.css
+++ b/css/main.css
@@ -378,9 +378,9 @@ button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-flex-item-align: center;
       align-self: center;
   width: 100%;
@@ -395,11 +395,7 @@ button:hover {
 
 .resto__item {
   background-color: white;
-  max-width: 520px;
   min-width: 340px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -411,6 +407,7 @@ button:hover {
   -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
           box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
   margin-bottom: 17px;
+  width: 49%;
 }
 
 .resto__item__pic {
@@ -631,9 +628,9 @@ button:hover {
   }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (max-width: 720px) {
   .resto__item {
-    margin: 20px 20px;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
