--- a/css/main.scss
+++ b/css/main.scss
@@ -241,7 +241,7 @@ button {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-between;
         align-self: center;
         width: 100%;
         max-width: 1120px;
@@ -253,14 +253,13 @@ button {
     }
     &__item {
         background-color: white;
-        max-width: 520px;
         min-width: 340px;
-        flex-grow: 1;
         display: flex;
         flex-direction: column;
         border-radius: 25px;
         box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
         margin-bottom: 17px;
+        width: 49%;
 
         &__pic {
             position: relative;
@@ -406,8 +405,9 @@ button {
         }
     }
 }
-@media screen and (min-width: 700px) {
+
+@media screen and (max-width: 720px) {
     .resto__item {
-        margin: 20px 20px;
+        width: 100%;
     }
 }
