--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,8 @@ html {
   scroll-behavior: smooth;
 }
 
-h1 {
+h1,
+h2 {
   margin: 50px 0 0 0px;
 }
 
@@ -304,7 +305,7 @@ button:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 30px 0px 68px 0px;
+  margin: 30px 0px 45px 0px;
   padding: 0;
   counter-reset: steps;
 }
@@ -320,12 +321,13 @@ button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 13px 0;
   list-style: none;
   counter-increment: steps;
   -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
           box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
   border-radius: 25px;
+  margin-top: 0;
+  margin-bottom: 23px;
 }
 
 .engineNotice ol li:hover {
@@ -388,7 +390,7 @@ button:hover {
   padding: 0 20px;
 }
 
-.resto h1 {
+.resto h2 {
   width: 100%;
   margin: 60px 0 25px 0px;
 }
@@ -562,6 +564,7 @@ button:hover {
   font-family: Shrikhand;
   font-size: 14pt;
   font-weight: 400;
+  margin: 16px 0 0 0;
 }
 
 .footer ul > li {
