--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,8 @@ html {
     font-family: "Roboto", sans-serif;
     scroll-behavior: smooth;
 }
-h1 {
+h1,
+h2 {
     margin: 50px 0 0 0px;
 }
 
@@ -175,8 +176,7 @@ button {
     display: flex;
     padding: 0 20px;
     flex-direction: column;
-    h1 {
-    }
+
     &__wrap {
         display: flex;
         flex-direction: column;
@@ -194,7 +194,7 @@ button {
         flex-direction: column;
         align-self: center;
         justify-content: space-between;
-        margin: 30px 0px 68px 0px;
+        margin: 30px 0px 45px 0px;
         padding: 0;
         counter-reset: steps;
     }
@@ -205,11 +205,12 @@ button {
         height: 73px;
         background-color: $background-color-grey;
         align-items: center;
-        margin: 13px 0;
         list-style: none;
         counter-increment: steps;
         box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
         border-radius: 25px;
+        margin-top: 0;
+        margin-bottom: 23px;
         &:hover {
             background-color: $color-one--10;
             .engineNotice__li__icn {
@@ -247,7 +248,7 @@ button {
         max-width: 1120px;
         padding: 0 20px;
     }
-    h1 {
+    h2 {
         width: 100%;
         margin: 60px 0 25px 0px;
     }
@@ -364,6 +365,7 @@ button {
         font-family: Shrikhand;
         font-size: 14pt;
         font-weight: 400;
+        margin: 16px 0 0 0;
     }
     ul > li {
         display: flex;
