--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,162 +1,3 @@
-/*Colors*/
-$color-one: rgba(147, 86, 220, 1);
-$color-one--10: rgba(147, 86, 220, 0.1);
-$color-two: #ff79da;
-$color-three: #99e2d0;
-$color-text-label: #008766;
-$background-color-main: #fff;
-$background-color-footer: #353535;
-$background-color-grey: #f6f6f6;
-$background-color-dark-grey: #eaeaea;
-
-a {
-    outline: none;
-    color: black;
-    display: flex;
-    text-decoration: none;
-    &:visited {
-        color: black;
-    }
-}
-ul {
-    padding: 0;
-    list-style: none;
-}
-body,
-html {
-    overflow-x: hidden;
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-    scroll-behavior: smooth;
-}
-h1,
-h2 {
-    margin: 50px 0 0 0px;
-}
-
-button {
-    margin-top: 30px;
-    border: 0;
-    padding: 0.75rem 1.5rem;
-    font-weight: 500;
-    font-size: 1.1rem;
-    border-radius: 100px;
-    color: white;
-    background-image: linear-gradient(
-        to bottom,
-        $color-two 1%,
-        $color-two 0%,
-        $color-one 100%
-    );
-    cursor: pointer;
-    transition-duration: 0.25s;
-    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
-    &:hover {
-        box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
-        filter: brightness(107%);
-    }
-}
-/* Loader */
-.loader {
-    transition: ease-in-out;
-    background-color: #fff;
-    opacity: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
-    font-family: Shrikhand, sans-serif;
-    font-size: x-large;
-    position: fixed;
-    z-index: 9999;
-    animation: loader 3s;
-    visibility: hidden;
-    &__brand {
-        display: flex;
-        position: absolute;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        z-index: 9999;
-
-        & span {
-            padding-bottom: 15px;
-        }
-    }
-    &__spinner {
-        z-index: 9998;
-        width: 200px;
-        height: 200px;
-        background-color: $background-color-main;
-        border-radius: 50%;
-        border: 3px solid $color-one--10;
-        border-top: solid 2px $color-one;
-        animation: spinner 0.75s infinite;
-    }
-}
-@keyframes loader {
-    0% {
-        visibility: visible;
-        opacity: 0.95;
-    }
-    100% {
-        visibility: hidden;
-        opacity: 0.95;
-    }
-}
-@keyframes spinner {
-    0% {
-        transform: rotate(0);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-/* header */
-.header {
-    margin: auto;
-    display: grid;
-    max-width: 1120px;
-    align-self: center;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    padding: 0 20px;
-    min-height: 63px;
-    align-items: center;
-    background-color: $background-color-main;
-    .header {
-        &__logo {
-            display: flex;
-            grid-area: 1 / 2 / 2 / 5;
-            justify-content: center;
-            img {
-                width: 100%;
-                max-width: 164px;
-            }
-        }
-        &__btn-back {
-            grid-area: 1 / 1 / 2 / 2;
-            img {
-                width: auto;
-            }
-        }
-    }
-}
-.cityMapping {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 50px;
-    background-color: $background-color-dark-grey;
-    & i {
-        margin-right: 18px;
-        margin-left: -18px;
-    }
-}
 /* Option selon ville  */
 .cityOptions {
     padding: 0 20px 50px 20px;
@@ -332,66 +173,11 @@ button {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: bold;
-    }
-}
-@keyframes fill {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
+        background-clip: text;
     }
 }
 
-/* Footer */
-
-.footer {
-    width: calc(100% - 40px);
-    padding: 15px 20px;
-    color: white;
-    background-color: $background-color-footer;
-    &__container {
-        &__icn {
-            padding-right: 10px;
-        }
-    }
-    a {
-        color: white;
-        &:visited {
-            color: white;
-        }
-    }
-    h2 {
-        font-family: Shrikhand;
-        font-size: 14pt;
-        font-weight: 400;
-        margin: 16px 0 0 0;
-    }
-    ul > li {
-        display: flex;
-        align-items: center;
-        line-height: 1.8rem;
-        font-weight: 500;
-        font-size: 11pt;
-    }
-}
 @media screen and (min-width: 1024px) {
-    .footer ul {
-        display: flex;
-        justify-content: space-between;
-    }
-    .footer {
-        li {
-            margin: 0 20px;
-        }
-        display: flex;
-        justify-content: center;
-        &__container {
-            width: 1120px;
-            display: flex;
-            justify-content: space-between;
-        }
-    }
     .resto__wrap {
         justify-content: space-between;
     }
