--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,3 +8,13 @@ $background-color-main: #fff;
 $background-color-footer: #353535;
 $background-color-grey: #f6f6f6;
 $background-color-dark-grey: #eaeaea;
+
+/*breakpoints*/
+$breakpoints: (
+    "phone-down": 500px,
+    "tablet-up": 768px,
+    "tablet-down": 900px,
+    "desktop-up": 1024px,
+    "desktop-down": 1280px,
+    "widescreen-up": 1440px,
+);
