--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -1,3 +1,6 @@
+@use 'sass:math';
+@use "sass:list";
+
 /*Intro - Loader*/
 
 @keyframes loader {
@@ -24,6 +27,18 @@
         opacity: 0;
     }
     to {
+        opacity: 1;
+    }
+}
+/* Animations Items PAGE Restaurant */
+
+@keyframes itemAppear {
+    0% {
+        transform: translate(0, 10px);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(0, 0);
         opacity: 1;
     }
 }
