--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,14 @@ a:visited {
 /* header */
 .header {
   margin: auto;
+  position: relative;
+  display: grid;
+  align-items: center;
+  background-color: #fff;
+}
+.header__wrap {
+  margin: auto;
+  position: relative;
   display: grid;
   max-width: 1120px;
   align-self: center;
@@ -43,32 +51,59 @@ a:visited {
   min-height: 63px;
   align-items: center;
   background-color: #fff;
+  width: 100%;
 }
-.header__logo {
+.header__wrap__logo {
   font-family: Shrikhand;
   font-size: 1.7rem;
   display: flex;
-  grid-area: 1/2/1/5;
-  box-shadow: black;
+  grid-area: 1/1/1/6;
+  width: 100%;
+  box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.1);
+  z-index: 26;
 }
-.header__logo a {
+.header__wrap__logo a {
   width: 100%;
   height: 63px;
   justify-content: center;
   align-items: center;
 }
 @media screen and (min-width: 1024px) {
-  .header__logo {
+  .header__wrap__logo {
     grid-area: 1/1/1/1;
     font-size: 2.7rem;
+    box-shadow: none;
   }
 }
 @media screen and (min-width: 768px) {
-  .header__logo {
+  .header__wrap__logo {
     font-size: 2rem;
   }
 }
+.header__wrap__cityMapping {
+  z-index: 25;
+  grid-area: 2/1/2/6;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 50px;
+  background-color: #eaeaea;
+}
+.header__wrap__cityMapping i {
+  margin-right: 18px;
+  margin-left: -18px;
+}
+@media screen and (min-width: 1024px) {
+  .header__wrap__cityMapping {
+    grid-area: 1/6/1/6;
+    background-color: white;
+    margin-right: 10px;
+  }
+}
 .header__btn-back a {
+  position: absolute;
+  top: 0;
   margin: 0 20px;
   height: 63px;
   width: 30%;
@@ -87,27 +122,8 @@ a:visited {
   .header {
     padding: 0 20px;
     grid-template-rows: 83px repeat(1, 1fr);
-  }
-}
-
-.cityMapping {
-  grid-area: 2/1/2/6;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  height: 50px;
-  background-color: #eaeaea;
-}
-.cityMapping i {
-  margin-right: 18px;
-  margin-left: -18px;
-}
-@media screen and (min-width: 1024px) {
-  .cityMapping {
-    grid-area: 1/6/1/6;
-    background-color: white;
-    margin-right: 10px;
+    z-index: 26;
+    box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -227,6 +243,17 @@ a:visited {
     opacity: 1;
   }
 }
+/* Animations Items PAGE Restaurant */
+@keyframes itemAppear {
+  0% {
+    transform: translate(0, 17px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+}
 button {
   margin-top: 30px;
   border: 0;
@@ -248,6 +275,8 @@ button:hover {
 /* Option selon ville  */
 .cityOptions {
   padding: 0 20px 50px 20px;
+  position: relative;
+  z-index: 24;
   background-color: #f6f6f6;
   display: flex;
   justify-content: center;
@@ -606,15 +635,10 @@ button:hover {
   color: #99e2d0;
 }
 
-/* Animations */
-@keyframes itemAppear {
-  0% {
-    transform: translate(0, 10px);
-    opacity: 0;
-  }
-  100% {
-    transform: translate(0, 0);
-    opacity: 1;
+@media screen and (min-width: 1120px) {
+  .restoMain__title {
+    width: 1070px;
+    align-self: center;
   }
 }
 /* Delay Animation */
@@ -656,13 +680,6 @@ button:hover {
 
 .time-9 {
   animation-delay: 1.125s;
-}
-
-@media screen and (min-width: 1120px) {
-  .restoMain__title {
-    width: 1070px;
-    align-self: center;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
