--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,36 +1,70 @@
 /* header */
 .header {
     margin: auto;
+    position: relative;
     display: grid;
-    max-width: 1120px;
-    align-self: center;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 63px repeat(1, 1fr);
-    min-height: 63px;
     align-items: center;
     background-color: $background-color-main;
-    &__logo {
-        font-family: Shrikhand;
-        font-size: 1.7rem;
-        display: flex;
-        grid-area: 1 / 2 / 1 / 5;
-        box-shadow: black;
-        a {
+    &__wrap {
+        margin: auto;
+        position: relative;
+        display: grid;
+        max-width: 1120px;
+        align-self: center;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 63px repeat(1, 1fr);
+        min-height: 63px;
+        align-items: center;
+        background-color: $background-color-main;
+        width: 100%;
+        &__logo {
+            font-family: Shrikhand;
+            font-size: 1.7rem;
+            display: flex;
+            grid-area: 1 / 1 / 1 / 6;
             width: 100%;
-            height: 63px;
-            justify-content: center;
+            box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.1);
+            z-index: 26;
+            a {
+                width: 100%;
+                height: 63px;
+                justify-content: center;
+                align-items: center;
+            }
+            @include media-min("desktop-up") {
+                grid-area: 1 / 1 / 1 / 1;
+                font-size: 2.7rem;
+                box-shadow: none;
+            }
+            @include media-min("tablet-up") {
+                font-size: 2rem;
+            }
+        }
+        &__cityMapping {
+            z-index: 25;
+            grid-area: 2 / 1 / 2 / 6;
             align-items: center;
-        }
-        @include media-min("desktop-up") {
-            grid-area: 1 / 1 / 1 / 1;
-            font-size: 2.7rem;
-        }
-        @include media-min("tablet-up") {
-            font-size: 2rem;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            height: 50px;
+            background-color: $background-color-dark-grey;
+            & i {
+                margin-right: 18px;
+                margin-left: -18px;
+            }
+            @include media-min("desktop-up") {
+                grid-area: 1 / 6 / 1 / 6;
+                background-color: white;
+                margin-right: 10px;
+            }
         }
     }
+
     &__btn-back {
         a {
+            position: absolute;
+            top: 0;
             margin: 0 20px;
             height: 63px;
             width: 30%;
@@ -47,24 +81,7 @@
     @include media-min("desktop-up") {
         padding: 0 20px;
         grid-template-rows: 83px repeat(1, 1fr);
-    }
-}
-
-.cityMapping {
-    grid-area: 2 / 1 / 2 / 6;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 50px;
-    background-color: $background-color-dark-grey;
-    & i {
-        margin-right: 18px;
-        margin-left: -18px;
-    }
-    @include media-min("desktop-up") {
-        grid-area: 1 / 6 / 1 / 6;
-        background-color: white;
-        margin-right: 10px;
+        z-index: 26;
+        box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.1);
     }
 }
