--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,8 @@
 /* Option selon ville  */
 .cityOptions {
     padding: 0 20px 50px 20px;
+    position: relative;
+    z-index: 24;
     background-color: $background-color-grey;
     display: flex;
     justify-content: center;
