--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,24 @@ button:hover {
   filter: brightness(107%);
 }
 
+/*Coeur Favoris*/
+.gradientIcon {
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: black;
+}
+.gradientIcon:hover {
+  animation: fill 0.3s;
+  display: inline-block;
+  opacity: 1;
+  background: linear-gradient(45deg, #ff79da, #9356dc);
+  background: -webkit-linear-gradient(45deg, #ff79da, #9356dc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+  background-clip: text;
+}
+
 /* Option selon ville  */
 .cityOptions {
   padding: 0 20px 50px 20px;
@@ -338,7 +356,6 @@ button:hover {
 }
 .engineNotice ol li::before {
   margin-left: -15px;
-  offset-position: left;
   display: flex;
   padding: 5px 10px;
   color: white;
@@ -435,23 +452,6 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.gradientIcon {
-  cursor: pointer;
-  font-size: 1.5rem;
-  color: black;
-}
-.gradientIcon:hover {
-  animation: fill 0.3s;
-  display: inline-block;
-  opacity: 1;
-  background: linear-gradient(45deg, #ff79da, #9356dc);
-  background: -webkit-linear-gradient(45deg, #ff79da, #9356dc);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: bold;
-  background-clip: text;
 }
 
 @media screen and (min-width: 1024px) {
